// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`examples/sage [snapshots] module map matches snapshot 1`] = `
Object {
  "byName": Object {
    "app": Any<Number>,
    "customizer": Any<Number>,
    "editor": Any<Number>,
    "runtime": Any<Number>,
  },
  "bySource": Object {
    "0 app": Any<Number>,
    "0 customizer": Any<Number>,
    "0 editor": Any<Number>,
    "1 app": Any<Number>,
    "1 customizer": Any<Number>,
    "1 editor": Any<Number>,
  },
  "usedIds": Array [
    Any<Number>,
    Any<Number>,
    Any<Number>,
    Any<Number>,
  ],
}
`;

exports[`examples/sage [snapshots] package.json is unchanged 1`] = `
Object {
  "browserslist": Array [
    "extends @wordpress/browserslist-config",
  ],
  "bud": Object {
    "location": Object {
      "src": "resources",
      "storage": "storage/bud",
    },
  },
  "devDependencies": Object {
    "@roots/bud": "workspace:*",
    "@roots/bud-eslint": "workspace:sources/@roots/bud-eslint",
    "@roots/bud-prettier": "workspace:sources/@roots/bud-prettier",
    "@roots/bud-stylelint": "workspace:sources/@roots/bud-stylelint",
    "@roots/bud-tailwindcss": "workspace:sources/@roots/bud-tailwindcss",
    "@roots/sage": "workspace:*",
    "@wordpress/browserslist-config": "4.1.0",
    "eslint": "8.6.0",
    "postcss": "8.4.5",
    "postcss-import": "14.0.2",
    "postcss-nested": "5.0.6",
    "postcss-preset-env": "7.1.0",
    "prettier": "2.5.1",
    "react": "17.0.2",
    "react-dom": "17.0.2",
    "tailwindcss": "3.0.8",
  },
  "name": "example-sage",
  "private": true,
}
`;

exports[`examples/sage [snapshots] public/manifest.json matches expectations 1`] = `
Array [
  "app.css",
  "app.js",
  "editor.css",
  "editor.js",
  "customizer.js",
  "runtime.js",
  "images/image.jpeg",
  "images/nested/image.jpeg",
]
`;

exports[`sage npm [snapshots] module map matches snapshot 1`] = `
Object {
  "byName": Object {
    "app": Any<Number>,
    "customizer": Any<Number>,
    "editor": Any<Number>,
    "runtime": Any<Number>,
  },
  "bySource": Object {
    "0 app": Any<Number>,
    "0 customizer": Any<Number>,
    "0 editor": Any<Number>,
    "1 app": Any<Number>,
    "1 customizer": Any<Number>,
    "1 editor": Any<Number>,
  },
  "usedIds": Array [
    Any<Number>,
    Any<Number>,
    Any<Number>,
    Any<Number>,
  ],
}
`;

exports[`sage npm [snapshots] package.json is unchanged 1`] = `
Object {
  "browserslist": Array [
    "extends @wordpress/browserslist-config",
  ],
  "devDependencies": Object {
    "@roots/bud": "latest",
    "@roots/bud-eslint": "latest",
    "@roots/bud-prettier": "latest",
    "@roots/bud-stylelint": "latest",
    "@roots/bud-tailwindcss": "latest",
    "@roots/sage": "latest",
    "@wordpress/browserslist-config": "4.1.0",
    "eslint": "8.6.0",
    "postcss": "8.4.5",
    "postcss-import": "14.0.2",
    "postcss-nested": "5.0.6",
    "postcss-preset-env": "7.1.0",
    "prettier": "2.5.1",
    "react": "17.0.2",
    "react-dom": "17.0.2",
    "tailwindcss": "3.0.8",
  },
  "name": "example-sage",
  "private": true,
}
`;

exports[`sage npm [snapshots] public/manifest.json matches expectations 1`] = `
Array [
  "app.css",
  "app.js",
  "editor.css",
  "editor.js",
  "customizer.js",
  "runtime.js",
  "images/image.jpeg",
  "images/nested/image.jpeg",
]
`;

exports[`sage sage [snapshots] module map matches snapshot 1`] = `
Object {
  "byName": Object {
    "app": Any<Number>,
    "customizer": Any<Number>,
    "editor": Any<Number>,
    "runtime": Any<Number>,
  },
  "bySource": Object {
    "0 app": Any<Number>,
    "0 customizer": Any<Number>,
    "0 editor": Any<Number>,
    "1 app": Any<Number>,
    "1 customizer": Any<Number>,
    "1 editor": Any<Number>,
  },
  "usedIds": Array [
    Any<Number>,
    Any<Number>,
    Any<Number>,
    Any<Number>,
  ],
}
`;

exports[`sage sage [snapshots] module map matches snapshot 2`] = `
Object {
  "byName": Object {
    "app": Any<Number>,
    "customizer": Any<Number>,
    "editor": Any<Number>,
    "runtime": Any<Number>,
  },
  "bySource": Object {
    "0 app": Any<Number>,
    "0 customizer": Any<Number>,
    "0 editor": Any<Number>,
    "1 app": Any<Number>,
    "1 customizer": Any<Number>,
    "1 editor": Any<Number>,
  },
  "usedIds": Array [
    Any<Number>,
    Any<Number>,
    Any<Number>,
    Any<Number>,
  ],
}
`;

exports[`sage sage [snapshots] public/manifest.json matches expectations 1`] = `
Array [
  "app.css",
  "app.js",
  "editor.css",
  "editor.js",
  "customizer.js",
  "runtime.js",
  "images/image.jpeg",
  "images/nested/image.jpeg",
]
`;

exports[`sage sage [snapshots] public/manifest.json matches expectations 2`] = `
Array [
  "app.css",
  "app.js",
  "editor.css",
  "editor.js",
  "customizer.js",
  "runtime.js",
  "images/image.jpeg",
  "images/nested/image.jpeg",
]
`;

exports[`sage yarn [snapshots] module map matches snapshot 1`] = `
Object {
  "byName": Object {
    "app": Any<Number>,
    "customizer": Any<Number>,
    "editor": Any<Number>,
    "runtime": Any<Number>,
  },
  "bySource": Object {
    "0 app": Any<Number>,
    "0 customizer": Any<Number>,
    "0 editor": Any<Number>,
    "1 app": Any<Number>,
    "1 customizer": Any<Number>,
    "1 editor": Any<Number>,
  },
  "usedIds": Array [
    Any<Number>,
    Any<Number>,
    Any<Number>,
    Any<Number>,
  ],
}
`;

exports[`sage yarn [snapshots] package.json is unchanged 1`] = `
Object {
  "browserslist": Array [
    "extends @wordpress/browserslist-config",
  ],
  "devDependencies": Object {
    "@roots/bud": "latest",
    "@roots/bud-eslint": "latest",
    "@roots/bud-prettier": "latest",
    "@roots/bud-stylelint": "latest",
    "@roots/bud-tailwindcss": "latest",
    "@roots/sage": "latest",
    "@wordpress/browserslist-config": "4.1.0",
    "eslint": "8.6.0",
    "postcss": "8.4.5",
    "postcss-import": "14.0.2",
    "postcss-nested": "5.0.6",
    "postcss-preset-env": "7.1.0",
    "prettier": "2.5.1",
    "react": "17.0.2",
    "react-dom": "17.0.2",
    "tailwindcss": "3.0.8",
  },
  "name": "example-sage",
  "private": true,
}
`;

exports[`sage yarn [snapshots] public/manifest.json matches expectations 1`] = `
Array [
  "app.css",
  "app.js",
  "editor.css",
  "editor.js",
  "customizer.js",
  "runtime.js",
  "images/image.jpeg",
  "images/nested/image.jpeg",
]
`;
